ordre des prestations

--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,7 @@ RewriteEngine on
 RewriteCond $1 !^(index\.php|resources|robots\.txt)
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php/$1 [L,QSA] 
+RewriteRule ^(.*)$ index.php?/$1 [L,QSA] 
 
 # Variable de serveur pour connaitre le type d'environnement
 SetEnv CI_ENV development
